# ex603_mcp_001

./: CMakeLists.txt  readme.md
data/: books.csv  file_of_strings.txt  inputfile_manning_hp_cpp_001.txt
documentation/read_file/: read_file.bib  read_file.tex
lib/inc/: arg_func.h  bartek.h  emc_sm_item_26_01.h  ext_polymorph.h  ext_polymorph_strategy.h  geometry.h  person.h  playing_cards.h  ranges_func.h  type_erasure.h  type_func.h
lib/inc/open_edg/: oedg_array.h
lib/src/: emc_sm_item_26_01.cpp  ext_polymorph_strategy.cpp  person.cpp  playing_cards.cpp  type_func.cpp
lib/src/open_edg/: oedg_array.cpp
main/: main.cpp  main_01.cpp  main_01_01.cpp  main_01_02.cpp  main_01_clang.cpp  main_01_gcc.cpp  main_01_msvc.cpp  main_02.cpp  main_04.cpp  main_05.cpp  main_06.cpp
test/inc/: gtest_ranges.h  scope_timer.h  test_bartek.h  test_book_camp.h  test_book_camp_06.h  test_chrono_func.h  test_concurrency.h  test_coro.h  test_csv_reader.h  test_emc_sm_item26.h  test_ext_polymorph.h  test_func_arg.h  test_lambda.h  test_overloading_tf.h  test_person.h  test_pmr.h  test_polymorphism.h  test_polymorphism_variant.h  test_ranges.h  test_read_file.h  test_refref_01.h  test_regex.h  test_shape.h  test_strong_type.h  test_type_erasure.h  test_type_func.h  test_unique_ptr.h  test_utils.h  test_visitor.h
test/inc/coro/: backawaiter.hpp  coro_iter.hpp  coro_parser.hpp  coro_return_type.hpp  coro_sync.hpp  coroasync.hpp  corochat.hpp  corogenback.hpp  coropool.hpp  coroprio.hpp  coropriosched.hpp  tracingawaiter.hpp  tracingcoro.hpp
test/inc/hp_tsdb/: test_hp_tsdb.h
test/inc/open_edg/: test_array.h
test/src/: gtest_ranges.cpp  gtest_ranges_01.cpp  gtest_ranges_02.cpp  test_bartek.cpp  test_book_camp.cpp  test_book_camp_06.cpp  test_chrono_func.cpp  test_concurrency.cpp  test_coro.cpp  test_csv_reader.cpp  test_emc_sm_item26.cpp  test_ext_polymorph.cpp  test_func_arg.cpp  test_lambda.cpp  test_overloading_tf.cpp  test_person.cpp  test_pmr.cpp  test_polymorphism.cpp  test_polymorphism_variant.cpp  test_ranges.cpp  test_read_file.cpp  test_refref_01.cpp  test_regex.cpp  test_shape.cpp  test_strong_type.cpp  test_type_erasure.cpp  test_type_func.cpp  test_unique_ptr.cpp  test_utils.cpp  test_visitor.cpp
test/src/hp_tsdb/: test_hp_tsdb.cpp
test/src/open_edg/: test_array.cpp
